// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarié > CCN HCR 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3313
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1909
salarié . rémunération . net . à payer avant impôt: 1983

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN batiment 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3674
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1859
salarié . rémunération . net . à payer avant impôt: 1931

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN batiment 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3656
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1873
salarié . rémunération . net . à payer avant impôt: 1933

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN batiment 3`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3707
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1875
salarié . rémunération . net . à payer avant impôt: 1949

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN compta 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3198
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1947
salarié . rémunération . net . à payer avant impôt: 2006

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN optique 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3373
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 1982
salarié . rémunération . net . à payer avant impôt: 2058

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > CCN spectacle vivant 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3629
salarié . rémunération . contrôle minimum: null
salarié . rémunération . net . payé après impôt: 2065
salarié . rémunération . net . à payer avant impôt: 2155

Notifications affichées : salarié . convention collective . avertissement convention collective, salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > CCN sport 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 913
salarié . rémunération . contrôle minimum: true
salarié . rémunération . net . payé après impôt: 592
salarié . rémunération . net . à payer avant impôt: 592

Notifications affichées : salarié . convention collective . avertissement convention collective, salarié . rémunération . contrôle minimum . smic"
`;

exports[`calculate simulations-salarié > CCN sport 2`] = `
"salarié . contrat . salaire brut: 1800
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1868
salarié . rémunération . contrôle minimum: true
salarié . rémunération . net . payé après impôt: 1399
salarié . rémunération . net . à payer avant impôt: 1399

Notifications affichées : salarié . convention collective . avertissement convention collective, salarié . rémunération . contrôle minimum . smic"
`;
